--- a/.env.dist
+++ b/.env.dist
@@ -12,3 +12,6 @@ TOGGLE_CACHE_DIR_WEEK="cache/TimeMatrix/Week"
 TOGGLE_CACHE_DIR_DAY="cache/TimeMatrix/Day"
 
 WORKING_WEEK_LENGTH_IN_MINUTES="2400"
+
+OFFICIAL_TIME_SERVICE_URL_TEMPLATE_LT="http://www.buhalteriams.lt/wp-content/plugins/darbo-poilsio-dienu-skaiciuokle/search_dienos.php?data_nuo={FROM_Y}-{FROM_m}-{FROM_d}&data_iki={TO_Y}-{TO_m}-{TO_d}"
+OFFICIAL_TIME_SERVICE_CONTENT_CACHE_DIR_DAY="cache/BuhalteriamsLt"
