Feat: Overtime diff added between date X and now (the end of the week of the latest Toggl entry)

--- a/.env.dist
+++ b/.env.dist
@@ -6,7 +6,7 @@ JIRA_LOG_LEVEL="WARNING"
 
 TOGGL_API_TOKEN="apitokenidentifyingmeontoggl"
 TOGGL_ENTRIES_FROM="2018-05-01T00:00:00+00:00"
-TOGGL_ENTRIES_TO="2018-10-31T23:59:59+00:00"
+TOGGL_ENTRIES_TO="2030-01-01T23:59:59+00:00"
 
 TOGGLE_CACHE_DIR_WEEK="cache/TimeMatrix/Week"
 TOGGLE_CACHE_DIR_DAY="cache/TimeMatrix/Day"
@@ -15,3 +15,5 @@ WORKING_WEEK_LENGTH_IN_MINUTES="2400"
 
 OFFICIAL_TIME_SERVICE_URL_TEMPLATE_LT="http://www.buhalteriams.lt/wp-content/plugins/darbo-poilsio-dienu-skaiciuokle/search_dienos.php?data_nuo={FROM_Y}-{FROM_m}-{FROM_d}&data_iki={TO_Y}-{TO_m}-{TO_d}"
 OFFICIAL_TIME_SERVICE_CONTENT_CACHE_DIR_DAY="cache/BuhalteriamsLt"
+
+OVERTIME_SUMMABLE_FROM="2018-12-10 - 2018-12-16"
